--- a/app/src/main/res/layout/activity_staff.xml
+++ b/app/src/main/res/layout/activity_staff.xml
@@ -6,11 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".activity.StaffActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="STAFF"
-        tools:layout_editor_absoluteX="185dp"
-        tools:layout_editor_absoluteY="110dp" />
+    <include
+        android:id="@+id/toolbarTop"
+        layout="@layout/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvStaff"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbarTop"
+        tools:listitem="@layout/item_staff" />
 </android.support.constraint.ConstraintLayout>
