HOME: prepare quiz

--- a/app/src/main/res/xml/settings_preference.xml
+++ b/app/src/main/res/xml/settings_preference.xml
@@ -2,19 +2,12 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-
     <PreferenceCategory
 
-        android:title="@string/settings_billing"
-        android:key="billing" >
-        <Preference
-            android:key="purchase"
-            android:summary="@string/settings_purchase_summary"
-            android:title="@string/settings_purchase"/>
-        <Preference
-            android:key="subscribe"
-            android:summary="@string/settings_subscribe_summary"
-            android:title="@string/settings_subscribe" />
+        android:key="billing"
+        android:title="@string/settings_billing">
+        <Preference android:key="purchase" />
+        <Preference android:key="subscribe" />
     </PreferenceCategory>
 
 
