--- a/app/src/main/res/layout/activity_quiz_prompt.xml
+++ b/app/src/main/res/layout/activity_quiz_prompt.xml
@@ -26,7 +26,7 @@
                 android:contentDescription="@string/app_name"
                 android:padding="10dp"
                 android:scaleType="centerInside"
-                android:src="@drawable/ic_idea" />
+                android:src="@drawable/medusa" />
 
             <TextView
                 android:id="@+id/first_text"
@@ -55,7 +55,7 @@
                 android:layout_below="@id/third_text"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/rectangle_blue"
-                android:text="yes"
+                android:text="да"
                 android:textColor="@color/white" />
 
             <Button
@@ -65,7 +65,7 @@
                 android:layout_below="@id/btn_yes"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/rectangle_red"
-                android:text="no"
+                android:text="нет"
                 android:textColor="@color/white" />
 
         </RelativeLayout>
