--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,15 +9,15 @@
 
     <ImageView
         android:id="@+id/ivSplashIcon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_width="114dp"
+        android:layout_height="102dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="160dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:srcCompat="@drawable/medusa" />
 
     <TextView
         android:id="@+id/tvAppName"
