--- a/app/src/main/res/layout/item_result.xml
+++ b/app/src/main/res/layout/item_result.xml
@@ -8,7 +8,6 @@
         android:id="@+id/score_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toStartOf="@+id/ans_icon"
         android:padding="15dp">
 
         <TextView
@@ -46,50 +45,50 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="6dp"
                     android:layout_weight="0.5"
-                    android:textColor="@color/red"
+                    android:textColor="@color/green"
                     tools:text="@string/greeting_text1" />
             </LinearLayout>
 
         </RelativeLayout>
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/your_ans_container"
-            android:layout_marginTop="4dp"
-            android:orientation="horizontal">
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@id/your_ans_container"-->
+<!--            android:layout_marginTop="4dp"-->
+<!--            android:orientation="horizontal">-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/correct_ans"
-                android:textColor="@color/black"
-                android:textStyle="bold" />
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="@string/correct_ans"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:textStyle="bold" />-->
 
-            <TextView
-                android:id="@+id/correct_ans_text"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="6dp"
-                android:layout_weight="0.5"
-                android:textColor="@color/green"
-                tools:text="@string/greeting_text1" />
+<!--            <TextView-->
+<!--                android:id="@+id/correct_ans_text"-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="6dp"-->
+<!--                android:layout_weight="0.5"-->
+<!--                android:textColor="@color/green"-->
+<!--                tools:text="@string/greeting_text1" />-->
 
-        </LinearLayout>
+<!--        </LinearLayout>-->
 
     </RelativeLayout>
 
-    <ImageView
-        android:id="@+id/ans_icon"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="15dp"
-        android:contentDescription="@string/app_name"
-        android:padding="6dp"
-        tools:src="@drawable/result_1" />
+<!--    <ImageView-->
+<!--        android:id="@+id/ans_icon"-->
+<!--        android:layout_width="30dp"-->
+<!--        android:layout_height="30dp"-->
+<!--        android:layout_alignParentEnd="true"-->
+<!--        android:layout_centerVertical="true"-->
+<!--        android:layout_marginEnd="15dp"-->
+<!--        android:contentDescription="@string/app_name"-->
+<!--        android:padding="6dp"-->
+<!--        tools:src="@drawable/result_1" />-->
 
     <View
         android:layout_width="match_parent"
